--- a/index.html
+++ b/index.html
@@ -3,12 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign In and Sign Up Form</title>
+    <link rel="stylesheet" 
+    href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     
+    <div class="container">
+        <div class="forms-container">
+            <div class="signin-signup">
+                <form action="#" class=" sign-in-form">
+                    <h2 class="title">Sign in</h2>
+                        <div class="input-field">
+                            <i class="fas fa-user"></i>
+                            <input type="text" placeholder="Username">
+                        </div>
+                        <div class="input-field">
+                            <i class="fas fa-lock"></i>
+                            <input type="password" placeholder="Password">
+                        </div>
+                        <input type="submit"  value="Login" class="btn slod">
+                        <p class="social-text">orSign in with social platforms</p>
+                        <div class="social-media">
+                            <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                            <a href="#" class="social-icon"><i class="fab fa-google"></i></a>
+                            <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                </form>
+            </div>
+            <div class="signup-singup">
+                <form action="#" class=" sign-up-form">
+                    <h2 class="title">Sign Up</h2>
+                        <div class="input-field">
+                            <i class="fas fa-user"></i>
+                            <input type="text" placeholder="Username">
+                        </div>
+                        <div class="input-field">
+                            <i class="fas fa-envelope"></i>
+                            <input type="email" placeholder="Email">
+                        </div>
+                        <div class="input-field">
+                            <i class="fas fa-lock"></i>
+                            <input type="password" placeholder="Password">
+                        </div>
+                        <input type="submit"  value="Login" class="btn slod">
+                        <p class="social-text">or Sign Up with social platforms</p>
+                        <div class="social-media">
+                            <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                            <a href="#" class="social-icon"><i class="fab fa-google"></i></a>
+                            <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                </form>
+            </div>
+        </div>
+        <div class="panels-container">
+            <div class="panel left-panel">
+                <div class="content">
+                    <h3>New Here</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus dolores labore quidem aut.</p>
+                    <button class="btn transparent" id="sign-up-button">Sign Up</button>
+                </div>
+                <img src="https://previews.123rf.com/images/jemastock/jemastock1608/jemastock160807029/61255728-flat-design-person-using-laptop-icon-vector-illustration.jpg" alt="" class="image">
+            </div>
 
+            <div class="panel right-panel">
+                <div class="content">
+                    <h3>New Here</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus dolores labore quidem aut.</p>
+                    <button class="btn transparent" id="sign-in-button">Sign In</button>
+                </div>
+                <img src="https://previews.123rf.com/images/jemastock/jemastock1608/jemastock160807029/61255728-flat-design-person-using-laptop-icon-vector-illustration.jpg" alt="" class="image">
+            </div>
+        </div>
+    </div>
 
     <script src="./app.js"></script>
 </body>
